--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@ body{
 max-width: 1400px;
 margin: 0 auto;
 }
+section{
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
 header{
     background-image: 
@@ -54,7 +58,47 @@ header a{
     margin-top: 24px;
     letter-spacing: 3px;
 }
-@media (max-width: 900px){
+footer{
+    color: white;
+    background-image: linear-gradient(rgba(39,32,68,0.9), rgba(39,
+        32,
+        68,
+        0.9)), url(../src/photos/krakow-widok.jpeg);
+
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 100px 0;
+}
+footer h3{
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 30px;
+}
+footer p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    margin: 20px;
+}
+footer li{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+footer a{
+    color: white;
+    opacity: 0.7;
+}
+footer ul{
+    padding: 0;
+}
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+}
+
+
+@media (max-width: 960px){
     header{
         padding: 60px 0;
     }
