added and styled another section

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,21 @@ margin: 0 auto;
 }
 
 section{
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 100px 0;
+    padding: 100px;
+}
+.card{
+    background-color: white;
+    padding: 30px 0;
+    margin: 30px 0;
+
+}
+.card h4{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1;
+    color: #384D57;
 }
 .grid {
     display: grid;
@@ -22,6 +34,22 @@ section{
 }
 .grid-3-columns{
     grid-template-columns: 1fr 2fr 2fr;
+}
+.grid-columns-cafe{
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.btn{
+    display: block;
+    color: white;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding: 16px;
+    background-color: #a24646;
+    text-decoration: none;
 }
 
 header{
@@ -72,8 +100,9 @@ header a{
 }
 
 main{
-    background-color: white;
+ background-color: white;   
 }
+
 main h3{
     font-weight: 700;
     font-size: 14px;
@@ -101,9 +130,15 @@ main p{
 }
 main img{
     max-width: 100%;
-    max-height: fit-content;
+    display: block;
 } 
 
+section .secondary{
+    background-color: #a24646;
+}
+.text-center{
+    text-align: center;
+}
 footer{
     color: white;
     background-image: linear-gradient(rgba(39,32,68,0.9), rgba(39,
